syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "storage/deployment.proto";
import "storage/network_flow.proto";
import "storage/policy.proto";
import "storage/process_indicator.proto";
import "gogoproto/gogo.proto";

package storage;

message Alert {
    message Deployment {
        string                  id                  = 1;
        string                  name                = 2;
        string                  type                = 4;
        string                  namespace           = 5;
        string                  namespace_id        = 16;
        map<string, string>     labels              = 7;
        string                  cluster_id          = 9;
        string                  cluster_name        = 10;
        message Container {
            ContainerImage      image               = 3;
            string              name                = 10;
        }
        repeated Container      containers          = 11;
        map<string, string>     annotations         = 14;
        bool                    inactive            = 15;
    }

    // Represents an alert on a kubernetes resource (configmaps, secrets, etc.)
    message Resource {
        enum ResourceType {
            UNKNOWN     = 0;
            SECRETS     = 1;
            CONFIGMAPS  = 2;
        }

        ResourceType            resource_type       = 1;
        string                  name                = 2;
        string                  cluster_id          = 3;
        string                  cluster_name        = 4;
        string                  namespace           = 5;
        string                  namespace_id        = 6;
    }

    message Violation {
        enum Type {
            GENERIC   = 0;
            K8S_EVENT = 1;
            NETWORK_FLOW = 2;
        }
        message KeyValueAttrs {
            message KeyValueAttr {
                string key   = 1;
                string value = 2;
            }
            repeated KeyValueAttr attrs = 1;
        }
        message NetworkFlowInfo {
            message Entity {
                string name = 1;
                storage.NetworkEntityInfo.Type entity_type = 2;
                string deployment_namespace = 3;
                string deployment_type = 5;
                int32 port = 6;
            }
            storage.L4Protocol protocol = 1;
            Entity source = 2;
            Entity destination = 3;
        }

        string                    message         = 1;
        reserved 2; // formerly link
        reserved 3; // formerly processes
        oneof MessageAttributes {
            KeyValueAttrs key_value_attrs         = 4;
            NetworkFlowInfo network_flow_info     = 7;
        }
        // 'type' is for internal use only.
        Type                      type            = 5;
        // Indicates violation time. This field differs from top-level field 'time' which represents last time the alert
        // occurred in case of multiple occurrences of the policy alert. As of 55.0, this field is set only for kubernetes
        // event violations, but may not be limited to it in future.
        google.protobuf.Timestamp time            = 6;
    }

    message ProcessViolation {
        string                    message   = 1;
        repeated ProcessIndicator processes = 2;
    }

    message Enforcement {
        storage.EnforcementAction action  = 1;
        string                    message = 2;
    }

    string                    id                = 1 [(gogoproto.moretags) = "sensorhash:\"ignore\""]; // Internal use only
    Policy                    policy            = 2;
    LifecycleStage            lifecycle_stage   = 3;

    oneof Entity {
        // Represents an alert on a deployment
        // An alert cannot be on more than one entity (deployment, container image, resource, etc.)
        Deployment            deployment        = 4  [(gogoproto.moretags) = "sensorhash:\"ignore\""];
        // Represents an alert on a container image.
        // An alert cannot be on more than one entity (deployment, container image, resource, etc.)
        ContainerImage        image             = 15;
        // Represents an alert on a kubernetes resource (configmaps, secrets, etc.)
        // An alert cannot be on more than one entity (deployment, container image, resource, etc.)
        Resource              resource          = 16;
    }

    // For run-time phase alert, a maximum of 40 violations are retained.
    repeated Violation        violations        = 5;
    ProcessViolation          process_violation = 13;

    Enforcement               enforcement       = 6;

    google.protobuf.Timestamp time              = 7 [(gogoproto.moretags) = "sensorhash:\"ignore\""];
    google.protobuf.Timestamp first_occurred    = 10 [(gogoproto.moretags) = "sensorhash:\"ignore\""];

    // The time at which the alert was resolved. Only set if ViolationState is RESOLVED.
    google.protobuf.Timestamp resolved_at       = 17 [(gogoproto.moretags) = "sensorhash:\"ignore\""];

    ViolationState            state             = 11;
    google.protobuf.Timestamp snooze_till       = 12;
    repeated string           tags              = 14;

}

message ListAlert {
    string                    id                 = 1;
    LifecycleStage            lifecycle_stage    = 2 [(gogoproto.moretags) = "search:\"Lifecycle Stage,store\""];
    google.protobuf.Timestamp time               = 3 [(gogoproto.moretags) = "search:\"Violation Time\""];
    ListAlertPolicy           policy             = 4;
    ListAlertDeployment       deployment         = 5;
    ViolationState            state              = 6 [(gogoproto.moretags) = "search:\"Violation State,store\""];
    int32                     enforcement_count  = 7;
    repeated string           tags               = 8 [(gogoproto.moretags) = "search:\"Tag,store\""];
    storage.EnforcementAction enforcement_action = 9;
}

message ListAlertPolicy {
    string id                                   = 1 [(gogoproto.moretags) = "search:\"Policy ID,store,hidden\""];
    string name                                 = 2 [(gogoproto.moretags) = "search:\"Policy,store\""];
    Severity severity                           = 3 [(gogoproto.moretags) = "search:\"Severity,store\""];
    string description                          = 4;
    repeated string categories                  = 5 [(gogoproto.moretags) = "search:\"Category,store\""];
}

message ListAlertDeployment {
    string id                                  = 1 [(gogoproto.moretags) = "search:\"Deployment ID,store,hidden\""];
    string name                                = 2 [(gogoproto.moretags) = "search:\"Deployment,store\""];
    reserved 3; // was: google.protobuf.Timestamp updated_at
    string cluster_name                        = 4 [(gogoproto.moretags) = "search:\"Cluster,store\""];
    string namespace                           = 5 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string cluster_id                          = 6 [(gogoproto.moretags) = "search:\"Cluster ID,store\""];
    bool inactive                              = 7 [(gogoproto.moretags) = "search:\"Inactive Deployment\""];
    string namespace_id                        = 8 [(gogoproto.moretags) = "search:\"Namespace ID\""];
}

enum ViolationState {
    ACTIVE = 0;
    SNOOZED = 1;
    RESOLVED = 2;
    ATTEMPTED = 3;
}
